Board view issue fix (#100)
* cursor pointer, hover effect svg, code cleaning

* deleted second scrollbar

* add no tasks to do if column is empty

* distances board cards & collumn-body

---------

--- a/src/app/main/board/board-card/board-card.scss
+++ b/src/app/main/board/board-card/board-card.scss
@@ -10,6 +10,7 @@
 	border: initial;
 	background: initial;
 	cursor: grab;
+  margin-bottom: 12px;
 }
 
 .container {
