--- a/src/app/main/board/board-view/board-view.scss
+++ b/src/app/main/board/board-view/board-view.scss
@@ -42,10 +42,6 @@
 		}
 	}
 
-	.task-add-button-desktop {
-		display: none;
-	}
-
 	.task-add-button {
 		width: 30px;
 		height: 30px;
@@ -118,11 +114,6 @@
 		gap: 0.5rem;
 	}
 
-	.desktop-headline-btn {
-		display: flex;
-		justify-content: space-between;
-	}
-
 	.btn-overlay {
 		display: none;
 	}
@@ -156,15 +147,29 @@
 	z-index: 1000;
 }
 
+  .no-tasks {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--input-gray);
+  background: #8b8b8b27;
+  margin-top: 0.1em;
+  border-radius: 8px;
+  border-style: dashed;
+  font-size: clamp(0.875em, 3vw, 1.125em);
+}
+
 @media (min-width: 1250px) {
 	.board-container {
-		padding-top: 3rem;
+		padding-top: 2rem;
 		background: var(--bg-color-gray);
 		overflow-x: hidden;
+    margin-bottom: 20px;
 	}
 
 	.board-header {
-		// Desktop: Suchfeld und Button in einer Reihe zentrieren
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
@@ -174,8 +179,7 @@
 		height: 44px;
 
 		.board-title {
-			// Anpassung der Schriftgröße für Desktop
-			font-size: 61px;
+			font-size: clamp(2em, 5vw, 3.8125em);
 			font-weight: var(--fw-bold);
 		}
 
@@ -226,7 +230,6 @@
 	}
 
 	.column-status {
-		// Jede Spalte soll gleich breit sein und nicht schrumpfen
 		flex-grow: 1;
 		flex-basis: 100px;
 
@@ -237,6 +240,7 @@
 			// Gesamthöhe abzüglich Titelhöhe
 			// Scrollbar nur für die Task-Karten
 			padding: 0.5rem;
+      margin-top: 20px;
 		}
 
 		.column-title {
@@ -255,13 +259,27 @@
 		.task-add-button {
 			width: 20px;
 			height: 20px;
-			cursor: pointer;
 
-			.svg-button-base {
-				cursor: pointer;
-			}
+      &:hover {
+        color: var(--bg-color-blue-lighter);
+      }
 		}
 	}
+
+  .no-tasks {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--input-gray);
+  background: #8b8b8b27;
+  margin-top: 0.4em;
+  border-radius: 8px;
+  border-style: dashed;
+  font-size: clamp(0.875em, 3vw, 1.125em);
+}
+
 
 	.cdk-drag-preview {
 		transition: rotate 220ms cubic-bezier(0, 0, 0.2, 0.5);
